ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      # volumes:
      #   - name: shared-share
      #     persistentVolumeClaim:
      #       claimName: share-claim
      containers:
        - name: ping-pong
          image: rvlq/ping-pong:20830
          # volumeMounts:
          # - name: shared-share
          #   mountPath: /app/shared
          resources:
              limits:
                memory: "64Mi"
                cpu: "100m"
